<resources>
    <string name="app_name">Happy Todo</string>
    <!-- Preference Titles -->
    <string name="messages_notification">Уведомления</string>
    <string name="messages_choose_theme">Выбор темы</string>

    <!-- Messages Preferences -->
    <string name="settings_notification_title">Присылать уведомления за…</string>
    <string name="dark_theme_title">Тёмная тема</string>

    <string name="notification_1day">1 день</string>
    <string name="notification_3day">3 дня</string>
    <string name="text_delete">Удалить</string>
    <string name="text_choose_date">Выберите дату</string>
    <string name="due_date">Сделать до</string>
    <string name="text_priority">Важность</string>

    <string name="priority_none">Нет</string>
    <string name="priority_low">Низкая</string>
    <string name="priority_high">Высокая</string>

    <string name="hint_what_todo">Что нужно сделать</string>
    <string name="button_save">СОХРАНИТЬ</string>
    <string name="alert_vide_text">Название задачи не должно быть пустым!</string>
    <string name="settings">Настройки</string>
    <string name="text_done">"Выполнено — "</string>
    <string name="load_from_fake_datasource">Данные загружены из FakeDataSource.</string>
    <string name="load_from_local_datasource">Используются локальные данные.</string>
    <string name="load_from_remote_datasource">Данные загружены с сервера.</string>
    <string name="no_connection">Нет подключения к интернету.</string>
    <string name="unknow_error">Неизвестная ошибка. Наверное, разработчику нужно оторвать руки ;)</string>
    <string name="retry">Повторить</string>
    <string name="error_401">Неверная авторизация.</string>
    <string name="error_404">Такой элемент на сервере не найден.</string>
    <string name="error_500">Ошибка сервера.</string>
    <string name="chanel_title">Напоминания</string>
    <string name="chanel_description">Напоминания для важных дел</string>
    <string name="message_dialog_permition1">Уведомления для этого приложения отключены. Пожалуйста, включите их в настройках \"Категории уведомлений\".</string>
    <string name="message_dialog_permition2">Требуется разрешение для отображения напоминаний о сроках выполнения задач.</string>
    <string name="message_no_notify">Напоминания не будут отображаться.</string>
    <string name="cancel">Отмена</string>
    <string name="allow">Разрешить</string>
    <string name="open_settings">Открыть настройки</string>
    <string name="notification_title">Нужно сделать сегодня</string>
    <string name="suffix_priority_low">" (Неважно):"</string>
    <string name="suffix_priority_high">" (Важно!!):"</string>
    <string name="suffix_priority_default">:</string>


</resources>
