<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_primary"
    tools:context=".presentation.additem.AddTodoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/back_primary"
        tools:context=".presentation.additem.AddTodoFragment">


        <!-- Кнопка закрытия -->
        <ImageView
            android:id="@+id/closeButton"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="21dp"
            android:src="@drawable/ic_close"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="?attr/label_primary" />


        <!-- Кнопка "СОХРАНИТЬ" -->
        <TextView
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:text="@string/button_save"
            android:textColor="@color/color_blue"
            android:textSize="19sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <!-- Поле "Что нужно сделать" -->
        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/rounded_corner_background"
            android:gravity="top"
            android:hint="@string/hint_what_todo"
            android:inputType="textMultiLine"
            android:maxLines="10"
            android:minLines="3"
            android:padding="20dp"
            android:textSize="19sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/saveButton" />

        <!-- Разделительная линия -->
        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:background="?attr/support_separator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText" />

        <!-- Важность -->
        <TextView
            android:id="@+id/text_priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/text_priority"
            android:textColor="@android:color/black"
            android:textSize="19sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view1" />

        <!-- Список важности -->
        <Spinner
            android:id="@+id/prioritySpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:entries="@array/priority_entries"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_priority" />


        <!-- Разделительная линия -->
        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:background="?attr/support_separator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/prioritySpinner" />


        <!-- Надпись "Сделать до" -->
        <TextView
            android:id="@+id/text_due_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:gravity="start"
            android:text="@string/due_date"
            android:textColor="?attr/label_primary"
            android:textSize="19sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view2" />

        <!-- Переключатель -->
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/dateSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:gravity="top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view2"
            app:thumbTint="@color/switch_thumb_selector"
            app:trackTint="@color/switch_track_selector" />


        <!-- Дата -->
        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="top"
            android:text="@string/text_choose_date"
            android:textColor="?attr/color_blue"
            android:textSize="14sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_due_date" />

        <!-- Разделительная линия -->
        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:background="?attr/support_separator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dateTextView" />

        <!-- Кнопка "Удалить" -->

        <TextView
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="14dp"
            android:enabled="false"
            android:paddingHorizontal="30dp"
            android:paddingVertical="30dp"
            android:text="@string/text_delete"
            android:textColor="@android:color/holo_red_light"
            android:textSize="19sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view3"
            app:drawableStartCompat="@drawable/ic_delete" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>